--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ a:hover {
   list-style: none;
   position: relative;
   background-color: var(--color5);
-  backdrop-filter: blur(5px);
+  /* backdrop-filter: blur(5px); */
   padding: 12px 30px;
   border: none;
   margin-bottom: -1px;
